# reactive-grasping-task

./: .gitmodules  README.md  permissionUSB.txt
glove-acquisition/: CMakeLists.txt  README.md  package.xml
glove-acquisition/config/: rosconsole_debug_enabled.conf
glove-acquisition/include/glove_acquisition/: glove_core.h
glove-acquisition/launch/: glove.launch  glove_publisher.launch
glove-acquisition/micro/: arduino_micro_sketch.ino
glove-acquisition/msg/: GloveIMU.msg  GloveIMUArray.msg
glove-acquisition/src/: glove_core.cpp  glove_listener.cpp  glove_talker.cpp
glove_relative/: CMakeLists.txt  package.xml
glove_relative/src/: glove_relative_node.cpp
reactive_grasping/: CMakeLists.txt  package.xml
reactive_grasping/action/: Motion.action
reactive_grasping/config/: comparison_dataset.yaml  comparison_dataset_ws30.yaml  comparison_dataset_ws6.yaml  rosconsole_info_enabled.conf  visualize_acceleration_maps.m
reactive_grasping/config/MATLAB script/: plot_acceleration_map.m  plot_data.m  visualize_acceleration_maps.m
reactive_grasping/include/: reactive_grasping_detection.h  reactive_grasping_motion.h
reactive_grasping/launch/: task_core.launch  task_demo.launch
reactive_grasping/msg/: DataHistory.msg  GloveIMU.msg  GloveIMUArray.msg
reactive_grasping/src/: detection.cpp  motion.cpp  reactive_grasping_detection.cpp  reactive_grasping_motion.cpp
reactive_grasping_description/: CMakeLists.txt  package.xml
reactive_grasping_description/config/: rviz_config.rviz  vito_controllers.yaml
reactive_grasping_description/launch/: display.launch
reactive_grasping_description/robot/: vito.urdf  vito.urdf.xacro
reactive_grasping_moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
reactive_grasping_moveit_configuration/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  vito.srdf
reactive_grasping_moveit_configuration/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  vito_moveit_controller_manager.launch.xml  warehouse.launch
