<package format="2">
  <name>reactive_grasping_description</name>
  <version>0.1.0</version>
  <description>
    Robot configuration for the reactive grasping task.
  </description>
  <author>Alessandro Tondo</author>
  <maintainer email="tondo.codes+ros@gmail.com">Alessandro Tondo</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>